# perx_test_task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api_example/: users.py
app/core/: config.py  dependencies.py  lifespan.py  logging.py  redis.py
app/core/database/: __init__.py
app/core/database/repositories/: __init__.py  base.py  sqlalchemy.py
app/core/exceptions/: __init__.py  handlers.py
app/core/middlewares/: __init__.py
app/example/api/: users.py
app/example/models/: user.py
app/example/repositories/: user.py
app/example/services/: user.py
app/repositories_example/: user.py
app/schemas/: user.py
app/services_example/: user.py
